# CircuitPython_STTS22H

./: .pylintrc  README.rst  pyproject.toml  stts22h.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: stts22h_output_data_rate.py  stts22h_simpletest.py
