# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-stts22h"
description = "CircuitPython Driver for the STTS22H Temperature Sensor"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "JDM", email = "jdm@mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/CircuitPython_STTS22H"}
keywords = [
    "sensor",
    "circuitpython",
    "stts22h",
    "temperature",
    "STTS22H",
    "driver",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["stts22h"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
